--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
-      <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">🌙</button>
+      <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+        <span>🌙</span>
+        <span>Theme</span>
+      </button>
     </div>
 
     <div class="container hero">
@@ -179,7 +182,7 @@
             <h3>Web Development Portfolio</h3>
             <p>
               A growing collection of websites and practice projects I build as I learn HTML, CSS, and
-              JavaScript, starting from this portfolio.
+              JavaScript, starting with this portfolio.
             </p>
             <a href="web-portfolio.html" class="btn-secondary">View details</a>
           </article>
@@ -217,7 +220,10 @@
       <!-- Contact -->
       <section id="contact" class="card section-animate">
         <h2>Contact</h2>
-        <p>If you'd like to work together or just say hello, feel free to reach out.</p>
+        <p>
+          If you’d like help planning a project, exploring a simple website, or just want to connect,
+          feel free to reach out below.
+        </p>
 
         <form
           action="https://formspree.io/f/mwpyeprl"
